cmake_minimum_required (VERSION 2.8)

aux_source_directory(. LIBHASH_SRC )

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../lib)

set(CMAKE_BUILD_TYPE "Debug")
#set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -DLOGGER_DEBUG_LEVEL")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -Wall -DLOGGER_INFO_LEVEL")

ADD_LIBRARY(hash STATIC ${LIBHASH_SRC})
