cmake_minimum_required (VERSION 2.8)

aux_source_directory(. LIBHASH_SRC )

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../lib)

set(CMAKE_BUILD_TYPE "Debug")
#set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g -ggdb3 -DLOGGER_DEBUG_LEVEL -DUSE_TCMALLOC")
set(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O2 -Wall -DLOGGER_INFO_LEVEL -DUSE_TCMALLOC")
#set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb3 -DLOGGER_DEBUG_LEVEL -DUSE_TCMALLOC")
#set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -Wall -DLOGGER_INFO_LEVEL -DUSE_TCMALLOC")

INCLUDE_DIRECTORIES(/opt/third_party/gperftools/include)

LINK_DIRECTORIES(/opt/third_party/gperftools/lib)

LINK_LIBRARIES(tcmalloc)

ADD_LIBRARY(hash SHARED ${LIBHASH_SRC})
